--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,8 @@ nav {
   color: #fff;
   text-shadow: .2rem .2rem .2rem #424343;
   font-weight: 600;
-  font-size: 6rem;
+  font-size: 6rem; <!-- remy odoszą się do wielkości fonta(chyba)-->
+  margin-bottom: 7rem;
 }
 
 .tasks-btn {
@@ -97,7 +98,7 @@ nav {
   text-transform: uppercase;
   font-size: 1.5rem;
   text-decoration: none;
-  margin-top: 3rem;
+  margin-top: 5rem;
   border: none;
   box-shadow: .2rem .2rem .2rem #7f7f7f;
 }
